--- a/session-06/old_imperative/react-component/index.html
+++ b/session-06/old_imperative/react-component/index.html
@@ -8,7 +8,6 @@
     <!-- https://react.dev/learn/reacting-to-input-with-state#how-declarative-ui-compares-to-imperative -->
     <!-- https://codesandbox.io/p/sandbox/react-dev-f5rdws?file=%2Fpublic%2Findex.html&utm_medium=sandpack -->
     <div id="app"></div>
-
     <!-- React and ReactDOM from UMD -->
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
@@ -18,13 +17,11 @@
     <!-- JSX script with type="text/babel" to ensure Babel compiles it - defer-->
     <script type="text/babel">
       function App({
-        initialStatus = "", // Rename the prop to initialStatus
+        initialStatus = "empty", // Rename the prop to initialStatus
       }) {
         const [answer, setAnswer] = React.useState("");
         const [error, setError] = React.useState(null);
-        const [status, setStatus] = React.useState(initialStatus); // status is now used as state only
-
-        // console.log(status);
+        const [status, setStatus] = React.useState("typing"); // status is now used as state only
 
         if (status === "success") {
           return <h1>That's right!</h1>;
@@ -73,7 +70,7 @@
         // Pretend it's hitting the network.
         return new Promise((resolve, reject) => {
           setTimeout(() => {
-            let shouldError = answer.toLowerCase() !== "state is hard";
+            let shouldError = answer.toLowerCase() !== "lima";
             if (shouldError) {
               reject(new Error("Good guess but a wrong answer. Try again!"));
             } else {
@@ -85,7 +82,7 @@
 
       // Correct usage of ReactDOM.createRoot
       const root = ReactDOM.createRoot(document.getElementById("app"));
-      root.render(<App initialStatus="typing" />);
+      root.render(<App />);
     </script>
   </body>
 </html>
